--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,10 @@
     "@babel/preset-env": "^7.21.4",
     "@vue/cli": "^5.0.8",
     "babel-loader": "^9.1.2",
-    "css-loader": "^6.7.3",
+    "css-loader": "^6.11.0",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^8.0.0",
+    "style-loader": "^4.0.0",
     "vue": "^3.2.47",
     "vue-loader-plugin": "^1.3.0",
     "vue-style-loader": "^4.1.3",
@@ -27,6 +28,8 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@fontsource/maven-pro": "^5.0.19",
+    "@fontsource/mea-culpa": "^5.0.20",
     "colors": "^1.4.0",
     "cross-env": "^7.0.3",
     "node-polyfill-webpack-plugin": "^2.0.1",
