--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,15 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development nodemon index.js"
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "prod": "cross-env NODE_ENV=production node index.js "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-history-api-fallback": "^2.0.0",
     "convert-excel-to-json": "^1.7.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
